<resources>
    <string name="app_name">List Buy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_picture">Picture</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_welcome_screen">Welcome</string>

    <!-- Strings related to login -->
    <string name="prompt_email">            Email                               </string>
    <string name="prompt_password">         Password                            </string>
    <string name="prompt_passwordConfirm">  Confirm Password                    </string>
    <string name="action_sign_in">          Sign in or register                 </string>
    <string name="userName">                Complete name                       </string>
    <string name="action_sign_in_short">    Sign in                             </string>
    <string name="error_invalid_name">      This name is too short              </string>
    <string name="error_invalid_email">     This email address is invalid       </string>
    <string name="error_invalid_password">  This password is too short          </string>
    <string name="error_incorrect_password">This password is incorrect          </string>
    <string name="error_confirm_password">  This not is equals the password     </string>
    <string name="error_field_required">    This field is required              </string>
    <string name="title_activity_main">     MainActivity                        </string>
    <string name="action_settings">         Settings                            </string>
    <string name="title_activity_register"> Register                            </string>
    <string name="pick_date">               Date                                </string>
    <string name="register">                Register                            </string>
    <string name="login">                   Login                               </string>


    <string name="fb_login">                Sign in with Facebook               </string>
    <string name="fb_register">             Sign up with Facebook               </string>
    <string name="gplus_login">             Sign in with Google+                </string>
    <string name="gplus_register">          Sign up with Google+                </string>
    <string name="or">                      OR                                  </string>


    <string name="profile">                      Profile                        </string>
    <string name="lists">                        Listas                         </string>
    <string name="feed">                         Feed                           </string>
    <string name="photos">                       Photos                         </string>
    <string name="action_logoff">                Logoff                         </string>

    <!-- talita -->

    <string name="title_activity_adicionar_produtos">Add Products</string>
    <string name="btnSalvar">Save</string>
    <string name="txtQtd">Quantity</string>
    <string name="btnok">Ok</string>
    <string name="txtQuantidade">Quantity</string>
    <string name="txtQtdade">Quantity</string>
    <string name="txtnomeDesc">Description of Product</string>
    <string name="btnOK">Ok</string>
    <string name="txtUnida">Unit of Measurement</string>
    <string name="btnCancel">Cancel</string>
    <string name="txtUnidades">Unit of Measurement</string>
    <string name="btnExcluir">Delete</string>
    <string name="txtcategoria">Selected Category</string>

    <!-- cagada da talita -->
    <string name="edtQtd" />
    <string name="edtqtd" />
    <string name="btnOk" />
    <string name="txtUnidade" />
    <string name="edtQuantidade" />
    <string name="extProduto" />
    <string name="edtUmed" />
    <string name="editTextCategoria" />
    <string name="txtCategoriaSet" />
    <string name="txtSlectUn" />
    <string name="txtSupermercado" />
    <string name="txtNoticia" />
    <string name="txtDetalhe1" />
    <string name="data" />
</resources>
