<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_dados_produtos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="listbuy.me.listbuy.lista.DadosProdutos">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        app:srcCompat="@drawable/mais"
        android:id="@+id/iconemais"
        android:layout_weight="0.16" />

    <View
        android:id="@+id/Divisor1"
        android:layout_width="fill_parent"
        android:layout_height="6dip"
        android:background="#A8A8A8" />


    <TextView
        android:text="@string/txtcategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CategoriaSelecionada"
        android:textColor="#cc000000"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/txtCategoriaSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0.28" />

    <TextView
        android:text="@string/txtnomeDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtnomeDesc"
        android:textColor="#cc000000"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/extProduto"
        android:text="@string/extProduto" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="127dp"
            android:layout_height="122dp"
            android:weightSum="1"
            android:layout_weight="0.41">

            <TextView
                android:text="@string/txtQtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtQtd"
                android:textColor="#cc000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:ems="5"/>

            <EditText
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtQtd"
                android:text="@string/edtQtd" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.36">

            <TextView
                android:text="@string/txtUnida"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtunid"
                android:textColor="#cc000000"
                android:textSize="15sp"
                android:textStyle="bold"/>
           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtUm"
                android:text="@string/edtUmed" />-->

           <!-- <TextView
                android:text="@string/txtSlectUn"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:id="@+id/txtUniSelec"
                tools:text="Selecione a UM" />-->

             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/spUm"
                 android:layout_weight="0.54" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">


        <Button
            android:text="@string/btnOK"
            android:layout_width="173dp"
            android:layout_height="23dp"
            android:id="@+id/btnOk"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <Button
            android:text="@string/btnCancel"
            android:layout_width="176dp"
            android:layout_height="33dp"
            android:id="@+id/btnCancel"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
