<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:visibility="gone" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5fb0c9"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">


        <RelativeLayout
            android:id="@+id/boardWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailLogin"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:hint="@string/prompt_email"
                        android:maxLines="1"
                        android:drawableLeft="@mipmap/user"
                        android:drawableTint="@color/colorAccent"
                        android:inputType="textEmailAddress"
                        android:fontFamily="sans-serif-medium"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:drawableLeft="@mipmap/lock"
                        android:drawableTint="@color/colorAccent"
                        android:inputType="textPassword"
                        android:fontFamily="sans-serif-medium"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:text="Forgot Password?" />


                <Button
                    android:id="@+id/sign_in_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    />

            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/txtOr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textSize="20sp" />


            <Button
                android:id="@+id/buttonLoginFacebook"
                android:layout_below="@+id/txtOr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3b5998"
                android:text="@string/fb_login"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:layout_below="@+id/buttonLoginFacebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#dc4e41"
                android:text="@string/gplus_login"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </RelativeLayout>



        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:elevation="4dp"
            android:src="@mipmap/listbuy"
            android:background="@drawable/logo_background"
            />

        <!--android:background="@mipmap/"-->
    </RelativeLayout>

</LinearLayout>

